2007-02-19  Yen-Ju Chen <yjchenx at gmail _dot_ com>

        * Format README in reStructuedText

2005-11-30  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile.headers: 
    * GNUmakefile.headers_build:
    Removed.
    * GNUmakefile:
    * Source/GNUmakefile:
    Streamlined GNUmakefiles to be simpler and match usual framework build 
    support.

2006-11-12  Yen-Ju Chen <yjchex gmail>

    * Source/PKPanesController.m: 
      if owner is a modal window, stop modal when window closes.

2006-11-11  Yen-Ju Chen <yjchex gmail>

    * Source/PKPanesController.m:
      Set self as delegate of owner if owner is a NSWindow.
      Otherwise, it will not receive -windowWillClose notification.
 
2006-11-09  Yen-Ju Chen <yjchex gmail>

    * Headers/PKPanesController.h:
    Fix missing 'const' for presentation mode.
    * Source/PKPanesController.m:
    Use NSPanel instead of NSWindow if owner is not assigned.
    * Source/PKPanesController.m:
    Try to fix a weird memory problem. (Not sure it is in PaneKit).

2006-11-08  Yen-Ju Chen <yjchex gmail>

    * Headers/PKPanesController.h:
    * Source/PKPanesController.m:
      Generic panes controller.
      Allow multiple instances.
      Still use PKPreferencesPane as pane.
    * Headers/PKPreferencesController.h:
    * Source/PKPreferencesController.m:
      Subclass of PKPanesController for .prefPane.
    * Source/UKPluginsRegistry.m:
      Main registry for PKPanesController.
    * Source/PKPrefPanesRegistry.m:
      Main registry for PKPreferencesController.
    * Source/PKToolbarPresentation.m:
      Fix drifting of toolbar presentation.
    * Source/PKTableViewPresentation.m:
      Initialize table view in -init and reuse it.
    * Headers/UKPluginsRegistry.h:
    * Headers/PKPaneRegistry.h:
    * Source/UKPluginsRegistry.h:
    * Source/PKPaneRegistry.h:
      Rename UKPluginsRegistry to PKPaneRegistry.
    * Rename PKPrefPanesRegistry to PKPreferencePaneRegistry.