@@ -1,3 +1,7 @@
+2007-04-18  Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Support popup button style.
+
 2007-02-19  Yen-Ju Chen <yjchenx at gmail _dot_ com>
 
         * Format README in reStructuedText
